--- a/Weitianshi/pages/search/search2/search2.wxml
+++ b/Weitianshi/pages/search/search2/search2.wxml
@@ -13,7 +13,6 @@
   <view class="searchContent contentAfter" bindtap='jumpToSearch' data-current="4">FA(融资顾问)</view>
 </view>
 
-
 <view class="swiper-tab">
   <view class="swiper-tab-list {{currentTab == 0 ? 'on' : ''}}" data-current="0" bindtap="swichNav">全部</view>
   <view class="swiper-tab-list {{currentTab == 1 ? 'on' : ''}}" data-current="1" bindtap="swichNav">项目</view>
@@ -29,7 +28,7 @@
         <view class="outPadding">
           <view class="blockTitle">项目</view>
         </view>
-        <template is="shopProject" data="{{investment_list,currentTab,index}}"></template>
+        <template is="shopProject" data="{{myProject:financingNeed,currentTab,index}}"></template>
         <view class="outPadding">
           <view class="more" wx:if="{{searchData.investment_list.list.length >= 6}}" bindtap="investment">更多</view>
         </view>
@@ -56,9 +55,6 @@
   <swiper-item data-current='1'>
     <scroll-view style="height:100%;" scroll-y="true" bindscrolltolower='loadMore' data-current='1'>
       <view class="outStyleBox1" id="investment" wx:if="{{investment_list.length != 0}}">
-        <view class="outPadding">
-          <view class="blockTitle">投资机构</view>
-        </view>
         <template is="investment" data="{{investment_list}}"></template>
       </view>
       <view class="outPadding">
@@ -67,9 +63,8 @@
     </scroll-view>
   </swiper-item>
   <swiper-item data-current='2'>
-    <scroll-view style="height:100%;" scroll-y="true">
+    <scroll-view style="height:100%;" scroll-y="true" bindscrolltolower='loadMore'>
       <view class="outStyleBox" id="memberList" wx:if="{{industry_list.length != 0}}">
-        <view class="blockTitle">投资领域</view>
         <block wx:for="{{industry_list}}" wx:key="{{item}}">
           <template is="industry" data="{{item}}"></template>
         </block>
@@ -77,28 +72,47 @@
       <view class="hasNothing" wx:if="{{industry_list.length == 0}}">暂无数据</view>
     </scroll-view>
   </swiper-item>
-  <swiper-item data-current='3'>
-    <scroll-view style="height:100%;" scroll-y="true" wx:if="{{memberList.length != 0}}" bindscrolltolower='loadMore' data-current='3'>
-      <view style="height:32rpx;width:100%;"></view>
-      <view class="outStyleBox1" id="memberList" wx:if="{{memberList.list.length != 0}}">
-        <view class="outPadding">
-          <view class="blockTitle">成员</view>
-        </view>
-        <template is="memberList" data="{{memberList}}"></template>
+  <swiper-item data-current='3' bindscrolltolower='loadMore'>
+    <scroll-view style="height:100%;" scroll-y="true" wx:if="{{investorList.length != 0}}" bindscrolltolower='loadMore' data-current='3'>
+      <view class="outStyleBox1" id="memberList" wx:if="{{investorList.list.length != 0}}">
+        <block wx:for="{{investorList}}" wx:key="{{investorList}}">
+          <template is='investorModel' data='{{item,user_id}}'></template>
+          <view class="t-alineHeight"></view>
+        </block>
       </view>
       <view class="hasNothing" wx:if="{{memberList.list.length == 0}}">暂无数据</view>
     </scroll-view>
   </swiper-item>
-  <swiper-item data-current='4'>
-    <scroll-view style="height:100%;" scroll-y="true" wx:if="{{memberList.length != 0}}" bindscrolltolower='loadMore' data-current='3'>
-      <view style="height:32rpx;width:100%;"></view>
-      <view class="outStyleBox1" id="memberList" wx:if="{{memberList.list.length != 0}}">
-        <view class="outPadding">
-          <view class="blockTitle">成员</view>
-        </view>
-        <template is="memberList" data="{{memberList}}"></template>
+  <swiper-item data-current='4' bindscrolltolower='loadMore'>
+    <scroll-view style="height:100%;" scroll-y="true" wx:if="{{faList.length != 0}}" bindscrolltolower='loadMore' data-current='3'>
+      <view class="outStyleBox1" id="memberList" wx:if="{{faList.list.length != 0}}">
+        <block wx:for="{{investorList}}" wx:key="{{investorList}}">
+          <template is="investorModel" data="{{item,user_id}}"></template>
+          <view class="t-alineHeight"></view>
+        </block>
       </view>
-      <view class="hasNothing" wx:if="{{memberList.list.length == 0}}">暂无数据</view>
+      <view class="hasNothing" wx:if="{{faList.list.length == 0}}">暂无数据</view>
     </scroll-view>
   </swiper-item>
 </swiper>
+
+<!--投资人  -->
+<template name="investorModel">
+  <view class="t-outsideBox" data-id="{{item.user_id}}" catchtap="userDetail">
+    <view class="t-applyMyProject t-contacts-detailm">
+      <view class="t-introduceBox flex">
+        <image src="{{item.investor_logo_url}}" class="t-userPic" wx:if="{{item.investor_logo_url}}"></image>
+        <view class="t-userName">{{item.investor_name}}</view>
+        <view class="t-userPart flex" wx:if="{{item.authentication[0].group_title}}">
+          <image class="t-renzheng" wx:if="{{item.authentication[0].group_title=='投资方'}}" src="/img/img-touziren@2x.png"></image>
+          <image class="t-renzheng" wx:if="{{item.authentication[0].group_title=='买方FA'}}" src="/img/img-maifang1@2x.png"></image>
+        </view>
+        <view class="t-user_text" wx:if="{{item.investor_logo_text}}">{{item.investor_logo_text}}</view>
+      </view>
+      <view class="t-careerCompany flex">
+        <view class="t-userPosition">{{item.investor_career}}</view>
+        <view class="t-userCompany1" wx:if="{{item.investor_company}}">·{{item.investor_company}}</view>
+      </view>
+    </view>
+  </view>
+</template>
