--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -9,7 +9,7 @@
         <view class="personActive" wx:if="{{playTime==1}}">{{user.active_status}}</view>
       </view>
       <view class="personPic">
-      <!-- <image wx:if="{{user.user_avatar_url}}" class="user_pic" src="{{user.user_avatar_url}}"></image>
+        <!-- <image wx:if="{{user.user_avatar_url}}" class="user_pic" src="{{user.user_avatar_url}}"></image>
       <view wx:if="{{user.user_avatar_text}}" class="user_text noPic">{{user.user_avatar_text}}</view> -->
       </view>
     </view>
@@ -23,13 +23,13 @@
         <view class="checkNum" catchtap="searchIdentification" wx:if="{{IdentificationShow == 1&& playTime == 0}}">查税号</view>
       </view>
       <view class="personCompany flex">
-            <image class='bottomPic' src='/img/icon-T@2x.png'></image>
+        <image class='bottomPic' src='/img/icon-T@2x.png'></image>
         <view class="personTelephone" wx:if="{{user.user_mobile}}">
           <label data-telephone="{{user.user_mobile}}" id="{{blue==-1?'mobileStyle':''}}" catchtap="telephone">{{user.user_mobile}}</label>
         </view>
       </view>
       <view class="personCompany flex">
-            <image class='bottomPic' src='/img/icon-E@2x.png'></image>
+        <image class='bottomPic' src='/img/icon-E@2x.png'></image>
         <view class="personEmail" wx:if="{{user.user_email}}">{{user.user_email}}</view>
       </view>
     </view>
@@ -43,8 +43,8 @@
       <view wx:if="{{!user.user_popularity}}" class="popularity-Num">{{count.user_view_all}}</view>
       <view class="popularity-people">人气</view>
     </view> -->
-    <!--加我为人脉-->
-    <!-- <view class="user_attention user_tips contacts-requestm" bindtap="attention" hover-class='t-color'>
+  <!--加我为人脉-->
+  <!-- <view class="user_attention user_tips contacts-requestm" bindtap="attention" hover-class='t-color'>
       <view wx:if="{{user.user_attention}}">{{user.user_attention}}</view>
       <label class="attentionNum" wx:if="{{count.user_followed_new && show ==1}}">+{{count.user_followed_new}}</label>
       <label class="popularityNum" wx:if="{{count.user_followed_new==0 || show ==0}}"></label>
@@ -52,8 +52,8 @@
       </view>
       <view class="attention-people">{{text}}</view>
     </view> -->
-    <!--潜在项目-->
-    <!-- <view class="user_potential user_tips potential-projectm" bindtap="pushTo" hover-class='t-color'>
+  <!--潜在项目-->
+  <!-- <view class="user_potential user_tips potential-projectm" bindtap="pushTo" hover-class='t-color'>
       <view wx:if="{{user.user_potential}}">{{user.user_potential}}</view>
       <label class="potentialNum" wx:if="{{count.project_push_new && show == 1}}">+{{count.project_push_new}}</label>
       <label class="popularityNum" wx:if="{{count.project_push_new==0 || show ==0}}"></label>
@@ -188,9 +188,9 @@
           <view class="successLeftTime" wx:if="{{item.case_deal_time}}">{{item.case_deal_time}}</view>
           <view class="successLeftTurn" wx:if="{{item.stage.stage_name}}">{{item.stage.stage_name}}</view>
         </view>
-     
+
         <view class="successRight">
-           <image src='/img/img-dot@2x.png' class="successPic"></image>
+          <image src='/img/img-dot@2x.png' class="successPic"></image>
           <view class="successProjcetName" wx:if="{{item.case_name}}">{{item.case_name}}</view>
           <view class="successRightArea">
             <label wx:if="{{item.case_money}}">{{item.case_money}}</label>*杭州</view>
@@ -895,6 +895,103 @@
   <view class='t-cardBottom flex' wx:if='{{item.user_id==user_id}}'></view>
 </template>
 
+<!--投资人卡片（不显示好友）  -->
+<template name="InvestorCard1">
+  <view class="t-outsideBox" data-id="{{item.user_id}}" catchtap="userDetail">
+    <view class="t-applyMyProject t-contacts-detailm">
+      <view class="t-introduceBox flex">
+        <image src="{{item.investor_logo_url}}" class="t-userPic" wx:if="{{item.investor_logo_url}}"></image>
+        <view class="t-userName">{{item.investor_name}}</view>
+        <view class="t-userPart flex" wx:if="{{item.authentication[0].group_title}}">
+          <!-- <image src="/img/icon-renzheng@2x.png" class="t-renzheng"></image>
+          <view class="t-userPart1">{{item.authentication[0].group_title}}</view> -->
+          <image class="t-renzheng" wx:if="{{item.authentication[0].group_title=='投资方'}}" src="/img/img-touziren@2x.png"></image>
+          <image class="t-renzheng" wx:if="{{item.authentication[0].group_title=='买方FA'}}" src="/img/img-maifang1@2x.png"></image>
+        </view>
+        <view class="t-record">{{item.active_status}}</view>
+        <view class="t-user_text" wx:if="{{item.investor_logo_text}}">{{item.investor_logo_text}}</view>
+
+      </view>
+      <view class="t-careerCompany flex">
+        <view class="t-userPosition">{{item.investor_career}}</view>
+        <view class="t-userCompany1" wx:if="{{item.investor_company}}">·{{item.investor_company}}</view>
+      </view>
+      <view class='t-people flex' wx:if='{{item.user_id!=user_id}}'>
+      
+      </view>
+      <view class='t-people flex' wx:if='{{item.user_id==user_id}}'></view>
+      <view class="t-roundGroupPush flex" wx:if="{{item.industry_tag.length != 0}}">
+        <image class="t-roundGroupTitle" src="/img/icon-lunci@2x.png"></image>
+        <view class="t-roundGroupContent">
+          <block wx:for="{{item.industry_tag}}" wx:key="{{industryItem.industry_id}}" wx:for-item='industryItem'>
+            <label wx:if="{{index < item.industry_tag.length-1}}">
+              {{industryItem.industry_name}}、
+            </label>
+            <label wx:if="{{index ==  item.industry_tag.length-1}}">
+              {{industryItem.industry_name}}
+            </label>
+          </block>
+        </view>
+      </view>
+      <view class="t-roundGroupPush flex" wx:if="{{item.stage_tag.length != 0}}">
+        <image class="t-roundGroupTitle" src="/img/icon-lingyu1@2x.png"></image>
+        <view class="t-roundGroupContent">
+          <block wx:for="{{item.stage_tag}}" wx:key="{{stageItem.stage_id}}" wx:for-item='stageItem'>
+            <label wx:if="{{index < item.stage_tag.length-1}}">{{stageItem.stage_name}}、</label>
+            <label wx:if="{{index ==item.stage_tag.length-1}}">{{stageItem.stage_name}}</label>
+          </block>
+        </view>
+      </view>
+    </view>
+  </view>
+</template>
+<!--卡片底部----推送项目和加人脉(没有浏览过项目的个数)  -->
+<template name='cardBottom2'>
+  <view class='t-cardBottom flex' wx:if='{{item.user_id!=user_id}}'>
+    <view class="t-history1" wx:if='{{item.follow_status==0}}' hover-class='t-hoverColor' hover-stop-propagation='true' data-id='{{item.user_id}}' catchtap='contactsAdd'>
+      <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
+      <span>加好友</span>
+    </view>
+    <view class="t-history1" wx:if='{{item.follow_status==1}}' hover-class='t-hoverColor' hover-stop-propagation='true' data-telephone="{{item.user_mobile}}" catchtap="telephone">
+      <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
+      <span>打电话</span>
+    </view>
+     <view class="t-history1" wx:if='{{item.follow_status==2}}' hover-class='t-hoverColor' hover-stop-propagation='true'>
+      <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
+      <span>待验证</span>
+    </view>
+     <view class="t-history1" wx:if='{{item.follow_status==3}}' data-id='{{item.user_id}}' catchtap='contactsAddDirect' hover-class='t-hoverColor' hover-stop-propagation='true'>
+      <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
+      <span>加好友</span>
+    </view>
+    <view class="t-line"></view>
+    <view class='t-cardBottomItem2 flex' hover-class='t-hoverColor' hover-stop-propagation='true' data-id='{{item.user_id}}' catchtap='projectPush'>
+      <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
+      <span>推送项目</span>
+    </view>
+    <!-- <view class='t-cardBottomItem flex'>
+      <image class='t-itemPic' src='/img/icon-tuisongxiangmu@2x.png'></image>
+      <span>已推送</span>
+    </view>
+    <view class='t-cardBottomItem flex' wx:if='{{item.follow_status==0}}' hover-class='t-hoverColor' hover-stop-propagation='true' data-id='{{item.user_id}}' catchtap='contactsAdd'>
+      <image class='t-itemPic' src='/img/icon-jiarenmai@2x.png'></image>
+      <view>加人脉</view>
+    </view>
+    <view class='t-cardBottomItem flex' wx:if='{{item.follow_status==1}}'>
+      <image class='t-itemPic' src='/img/icon-huweirenmai@2x.png'></image>
+      <view style='color:#999;'>已为人脉</view>
+    </view>
+    <view class='t-cardBottomItem flex' wx:if='{{item.follow_status==2}}'>
+      <image class='t-itemPic' src='/img/icon-daiyanzheng@3x.png'></image>
+      <view style='color:#999;'>待验证</view>
+    </view>
+    <view class='t-cardBottomItem flex' wx:if='{{item.follow_status==3}}' data-id='{{item.user_id}}' catchtap='contactsAddDirect'>
+      <image class='t-itemPic' src='/img/icon-jiarenmai@2x.png'></image>
+      <view>加人脉</view>
+    </view> -->
+  </view>
+  <view class='t-cardBottom flex' wx:if='{{item.user_id==user_id}}'></view>
+</template>
 <!--跳转页面  -->
 <template name="jumpToWhere">
   <view class="t-upBox flex">
@@ -1327,7 +1424,7 @@
   <view class='t-cardBottom flex' wx:if='{{item.user_id!=user_id}}'>
     <view class="t-yichu" catchtap="deletePerson" data-investor="{{item.investor_id}}">移除</view>
     <view class="t-line"></view>
-    <view class='t-yiti flex'catchtap="pushProject" data-id="{{item.user_id}}" wx:if="{{item.push_status == 0}}" catchtap='pushProject' hover-class='t-hoverColor' hover-stop-propagation='true' >
+    <view class='t-yiti flex' catchtap="pushProject" data-id="{{item.user_id}}" wx:if="{{item.push_status == 0}}" catchtap='pushProject' hover-class='t-hoverColor' hover-stop-propagation='true'>
       <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
       <span>提交项目</span>
     </view>
