--- a/Weitianshi/pages/discover/discoverPerson/discoverPerson.wxml
+++ b/Weitianshi/pages/discover/discoverPerson/discoverPerson.wxml
@@ -9,11 +9,11 @@
       <view class="t-investorColor" hover-class='t-hoverColor'>
         <template is='InvestorCard' data='{{item,user_id,user_mobile}}'></template>
         <view class="t-alineHeight"></view>
-        <template is='cardBottom1' data='{{item}}'></template>
+        <template is='cardBottom1' data='{{item,user_id,user_mobile}}'></template>
       </view>
     </view>
   </block>
-  <template is="theBottom" wx:if="{{investorList!==''}}"></template>
+  <template is="theBottom" wx:if="{{jiandi==true}}"></template>
   <view class="high"></view>
 </scroll-view>
 <!--空状态-->
