--- a/Weitianshi/pages/myProject/proMilestone/proMilestone.wxml
+++ b/Weitianshi/pages/myProject/proMilestone/proMilestone.wxml
@@ -6,8 +6,8 @@
   <block wx:for="{{mileStoneArray}}" wx:key="{{mileStoneArray}}">
     <template is="investHistory1" data='{{item}}'></template>
   </block>
-  <template is="theBottom" wx:if="{{mileStoneArray!==''}}"></template>
-  <view class="high"></view>
+  <!-- <template is="theBottom" wx:if="{{mileStoneArray!==''}}"></template> -->
+  <!-- <view class="high"></view> -->
 </scroll-view>
 <!--空状态-->
 <template is="isEmpty" data="{{emptyNumber:mileStoneArray}}"></template>
